[project]
name = "isp-hdr"
version = "0.1.0"
description = "ISP HDR Pipeline"
readme = "README.md"
authors = [
    {name = "vsb", email = "vivekalig@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "hydra-core>=1.3.3",
    "imagecodecs>=2026.6.6",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "rawpy>=0.27.0",
    "scipy>=1.18.0",
    "tifffile>=2026.6.1",
]

# Entry point definition
[project.scripts]
isp-hdr = "isp_hdr.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build >= 0.11.19,<0.12.0"]
build-backend = "uv_build"
